kubernetes/app/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: app-namespace
---
apiVersion: v1
kind: Namespace
metadata:
  name: db-namespace
