kubernetes/app/words-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: words
  namespace: app-namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: words
  template:
    metadata:
      labels:
        app: words
    spec:
      containers:
      - name: words
        image: ghcr.io/biothewolff/kube-grenade/words:latest
        resources:
          limits:
            memory: "128Mi"
            cpu: "0.2"
        securityContext:
          privileged: false
        ports:
        - containerPort: 8081
