kubernetes/app/aggregator-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aggregator
  namespace: app-namespace
  labels:
    app: aggregator
    service: aggregator
spec:
  selector:
    app: aggregator
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
