kubernetes/app/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: db-namespace
spec:
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: postgres
  type: ClusterIP
